--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: false
+      read_time: true
       comments: false
       share: false
       related: false
@@ -66,7 +66,7 @@ defaults:
 markdown: kramdown
 theme: minima
 remote_theme: "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+minimal_mistakes_skin: "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 paginate: 10
 paginate_path: /page:num/
 category_archive:
